--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Web Dev Session 1</title>
+	<title>Web Dev Session 2</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,900" rel="stylesheet">
 	<link rel="stylesheet" href="./css/main.css">
@@ -20,7 +20,7 @@
 				<a ng-click="tabClicked('week1')"><h3>Week 1</h3><h4>HTML &amp; CSS</h4></a>
 			</li>
 			<li ng-class="{'active': route == 'week2'}">
-				<a ng-click="tabClicked('week2')"><h3>Week 2</h3><h4>JavaScript &amp; jQuery</h4></a>
+				<a ng-click="tabClicked('week2')"><h3>Week 2</h3><h4>JavaScript</h4></a>
 			</li>
 			<li ng-class="{'active': route == 'week3'}">
 				<a ng-click="tabClicked('week3')"><h3>Week 3</h3><h4>AngularJS</h4></a>
